--- a/src/app/Components/welcome/welcome.component.html
+++ b/src/app/Components/welcome/welcome.component.html
@@ -1,9 +1,10 @@
 <ion-content>
     <div >
       <p>
-        welcome works!
+        Drivemada
       </p>
       <ion-button (click) = "login()" expand = "block" fill = "outline" class = "login">Login</ion-button>
+      
       <ion-button (click) = "signUp()" expand = "block" fill = "outline" class = "signUp">Sign up</ion-button>
     </div>
 </ion-content>
