--- a/src/app/Components/welcome/welcome.component.html
+++ b/src/app/Components/welcome/welcome.component.html
@@ -1,8 +1,12 @@
+<ion-toolbar>
+  <ion-header>
+    <ion-title>Drivemada</ion-title>
+  </ion-header>
+</ion-toolbar>
+
 <ion-content>
     <div >
-      <p>
-        Drivemada
-      </p>
+      
       <ion-button (click) = "login()" expand = "block" fill = "outline" class = "login">Login</ion-button>
       
       <ion-button (click) = "signUp()" expand = "block" fill = "outline" class = "signUp">Sign up</ion-button>
