--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,12 +1,15 @@
+<ion-toolbar>
+  <ion-header>
+    <ion-title>Login</ion-title>
+  </ion-header>
+</ion-toolbar>
+
 <ion-content>
   <form #loginform="ngForm">
 
-  <div class="mb-5 ng-star-inserted">
-    <h6 class="h3">Login</h6>
-  </div>
-  <div class="form-group">
-    <ion-item>
-      <ion-label>Email</ion-label>
+    <ion-item class="input-circle">
+      <ion-icon name="mail-outline" slot="start"></ion-icon>
+      
       <ion-input [(ngModel)]="driver.email" name="email" #email="ngModel" required placeholder="Email" id="email"
         type="email">
       </ion-input>
@@ -14,23 +17,25 @@
     <div class="alert alert-danger" *ngIf="email.touched && !email.valid">
       <div *ngIf="email.errors.required">Email is required</div>
     </div>
-  </div>
-  <div class="form-group">
-    <ion-item>
-      <ion-label>Password</ion-label>
-      <ion-input [(ngModel)]="driver.password" name="password" #password="ngModel" required placeholder="Password"
-        id="password" type="password"></ion-input>
-    </ion-item>
-    <div class="alert alert-danger" *ngIf="password.touched && !password.valid">
-      <div *ngIf="password.errors.required">Password is required</div>
+    
+    <div class="form-group">
+      <ion-item class="input-circle">
+        <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
+        <ion-input [(ngModel)]="driver.password" name="password" #password="ngModel" required placeholder="Password"
+          id="password" type="password"></ion-input>
+      </ion-item>
+      <div class="alert alert-danger" *ngIf="password.touched && !password.valid">
+        <div *ngIf="password.errors.required">Password is required</div>
+      </div>
     </div>
-  </div>
 
-  <div class="mt-4">
-    <button class="button button-large" type="submit" [disabled]="!loginform.form.valid" (click)="this.router.navigateByUrl('welcome')">
-      <span class="btn-inner--text">Login</span>
-      <span class="btn-inner--icon"><i class="fas fa-long-arrow-alt-right"></i></span></button>
-  </div>
-</form>
+    
+    <div class="mt-4">
+      <button class="button button-large" type="submit" [disabled]="!loginform.form.valid"
+        (click)="this.router.navigateByUrl('welcome')">
+        <span class="btn-inner--text">Login</span>
+        <span class="btn-inner--icon"><i class="fas fa-long-arrow-alt-right"></i></span></button>
+    </div>
+  </form>
 
 </ion-content>
