--- a/src/app/Components/register/register.page.html
+++ b/src/app/Components/register/register.page.html
@@ -1,11 +1,13 @@
-<script>
-
-</script>
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="first"></ion-menu-button>
+    </ion-buttons>
     <ion-title>Sign Up</ion-title>
   </ion-toolbar>
 </ion-header>
+
+
 <ion-content>
 
   <form #registerForm="ngForm">
@@ -124,4 +126,4 @@
     </div>
   </form>
 
-</ion-content>
+</ion-content> 
