--- a/src/assets/scss/purpose-dark.scss
+++ b/src/assets/scss/purpose-dark.scss
@@ -47,4 +47,4 @@ Copyright 2018-2019 Webpixels
 // Custom styles
 @import 'custom/styles';
 
-@import '../../../node_modules/ngx-toastr/toastr.css'
+@import '../../../node_modules/ngx-toastr/toastr-bs4-alert.scss'
