add vehicle and login logic

--- a/src/app/Components/registration/registration.component.html
+++ b/src/app/Components/registration/registration.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title class="h3 text-center">Create Account</ion-title>
+    <ion-title class="h3 text-center" text-center>Create Account</ion-title>
     <ion-icon (click)="goBackToLogin()" name="arrow-back-outline" slot="start" style="zoom:2.0;"></ion-icon>
   </ion-toolbar>
 </ion-header>
