--- a/src/assets/scss/purpose-blue-light.scss
+++ b/src/assets/scss/purpose-blue-light.scss
@@ -12,7 +12,7 @@ Copyright 2018-2019 Webpixels
 */
 
 // Bootstrap functions
-@import '../../node_modules/bootstrap/scss/functions';
+@import 'node_modules/bootstrap/scss/functions';
 
 // Skin
  @import "skins/blue/light";
@@ -28,9 +28,9 @@ Copyright 2018-2019 Webpixels
 @import "custom/fonts";
 
 // Bootstrap core
-@import "../../node_modules/bootstrap/scss/functions";
-@import "../../node_modules/bootstrap/scss/variables";
-@import "../../node_modules/bootstrap/scss/mixins";
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
 
 // Purpose mixins
 @import "purpose/mixins";
