--- a/src/assets/scss/purpose-dark.scss
+++ b/src/assets/scss/purpose-dark.scss
@@ -12,7 +12,7 @@ Copyright 2018-2019 Webpixels
 */
 
 // Bootstrap functions
-@import '../../../node_modules/bootstrap/scss/functions';
+@import 'node_modules/bootstrap/scss/functions';
 
 // Skin
  @import "skins/default/dark";
@@ -28,9 +28,9 @@ Copyright 2018-2019 Webpixels
 @import "custom/fonts";
 
 // Bootstrap core
-@import "../../../node_modules/bootstrap/scss/functions";
-@import "../../../node_modules/bootstrap/scss/variables";
-@import "../../../node_modules/bootstrap/scss/mixins";
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
 
 // Purpose mixins
 @import "purpose/mixins";
@@ -47,4 +47,4 @@ Copyright 2018-2019 Webpixels
 // Custom styles
 @import 'custom/styles';
 
-@import '../../../node_modules/ngx-toastr/toastr-bs4-alert.scss'
+@import 'node_modules/ngx-toastr/toastr-bs4-alert.scss'
