--- a/src/app/Components/vehicle/vehicle.component.scss
+++ b/src/app/Components/vehicle/vehicle.component.scss
@@ -1,3 +1,26 @@
 .map{
     height: 100%;
 }
+.ion-item {
+    --background: #FBE1DD;
+    --border-color: #F08A7F;
+   
+}       
+.ion-item-edit {
+    --background: #ED7B6F;
+    --border-color: #F08A7F;
+}
+.toolbar-header{
+    --background: #ec6d5f;
+    --border-color: #ec6d5f ;
+    --color: white;
+}  
+.content{
+    --background: white;
+
+}
+.addButton{
+    --background: #ec6d5f;
+    --border-color: #ec6d5f ;
+    --color: white;
+}
