--- a/src/assets/scss/skins/default/_dark.scss
+++ b/src/assets/scss/skins/default/_dark.scss
@@ -25,6 +25,7 @@ $rose-600: #F7C3BD !default;
 $rose-700: #F5B4AD !default;
 $rose-800: #F3A199 !default;
 $rose-900: #F08A7F !default;
+$rose-950: #ED7B6F !default;
 
 // Gray shades for dark mode
 
