--- a/src/app/Components/registration/registration.component.scss
+++ b/src/app/Components/registration/registration.component.scss
@@ -13,3 +13,9 @@
     padding-left: 40px;
     padding-right: 40px;
 }
+
+.toolbar-header{
+    --background: #ec6d5f;
+    --border-color: #ec6d5f ;
+    --color: white;
+}
