--- a/src/app/Components/welcome/welcome.component.html
+++ b/src/app/Components/welcome/welcome.component.html
@@ -1,14 +1,18 @@
-<ion-toolbar>
+<ion-toolbar class="toolbar-header">
   <ion-header>
-    <ion-title>Drivemada</ion-title>
+    <ion-title style="color: white; font-weight: 700; font-size: large;">Drivemada</ion-title>
   </ion-header>
 </ion-toolbar>
 
 <ion-content>
-    <div >
-      
-      <ion-button (click) = "login()" expand = "block" fill = "outline" class = "login">Login</ion-button>
-      
-      <ion-button (click) = "signUp()" expand = "block" fill = "outline" class = "signUp">Sign up</ion-button>
-    </div>
+  <div>
+    <img style="width:100%; height: 100%; opacity: 0.9;"src="assets/night-driving.png">
+  </div>
+    
 </ion-content>
+
+<ion-footer>
+  <ion-button expand="full" fill="solid" style="font-weight: 700;" (click) = "login()" class = "loginButton">Login</ion-button>
+      
+  <ion-button expand="full" fill="solid" style="font-weight: 700;" (click) = "signUp()" class = "loginButton">Sign up</ion-button>
+</ion-footer>
