--- a/src/app/Components/drive/drive.component.scss
+++ b/src/app/Components/drive/drive.component.scss
@@ -1,3 +1,14 @@
 .map{
-    height: 50%;
+    height: 100%;
+}
+.toolbar-header{
+    --background: #ec6d5f;
+    --border-color: #ec6d5f ;
+    --color: white;
+}
+
+.startTripButton{
+    --background: #ec6d5f;
+    --border-color: #ec6d5f ;
+    --color: white;
 }
