--- a/src/app/Components/edit-acct/edit-acct.component.html
+++ b/src/app/Components/edit-acct/edit-acct.component.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Edit Account</ion-title>
     <ion-icon name="arrow-back-outline" slot="start"></ion-icon>
   </ion-toolbar>
