--- a/src/app/Components/settings/settings.component.html
+++ b/src/app/Components/settings/settings.component.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="toolbar-header">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Settings</ion-title>
     <ion-icon name="build-sharp" slot="end"></ion-icon>
   </ion-toolbar>
@@ -36,5 +39,5 @@
     </ion-item>
   </ion-list>
 
-  <ion-button expand="block" fill="outline" (click)="logout()">LOG OUT</ion-button>
+  <ion-button class="startTripButton"expand="block" fill="outline" (click)="logout()">LOG OUT</ion-button>
 </ion-content>
