--- a/src/app/Components/vehicle/vehicle.add.component.html
+++ b/src/app/Components/vehicle/vehicle.add.component.html
@@ -1,5 +1,8 @@
 <ion-header>
     <ion-toolbar class="toolbar-header">
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+          </ion-buttons>
         <ion-title *ngIf="!isEditMode" class="h3 text-center" style="color: white; font-weight: 700;" >Add Vehicle</ion-title>
         <ion-title *ngIf="isEditMode" class="h3 text-center" style="color: white; font-weight: 700;">Edit Vehicle</ion-title>
         <ion-icon (click)="goBackVehicles()" name="arrow-back-outline" slot="start" style="zoom:2.0;"></ion-icon>
