--- a/src/app/Components/vehicle/vehicle.component.html
+++ b/src/app/Components/vehicle/vehicle.component.html
@@ -1,12 +1,15 @@
 <ion-header>
   <ion-toolbar class="toolbar-header">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title class="h3 text-center" style="color: white; font-weight: 700;">Welcome {{user.firstName}}</ion-title>
   </ion-toolbar>
 
 
 
 </ion-header>
-<ion-content class="content" background= "blue">
+<ion-content class="content">
   <!--<div #mapElement class="map"></div> -->
 
 
