--- a/src/app/Components/welcome/welcome.component.html
+++ b/src/app/Components/welcome/welcome.component.html
@@ -1,18 +1,21 @@
-<ion-toolbar class="toolbar-header">
-  <ion-header>
+<ion-header>
+  <ion-toolbar class="toolbar-header">
     <ion-title style="color: white; font-weight: 700; font-size: large;">Drivemada</ion-title>
-  </ion-header>
-</ion-toolbar>
+  </ion-toolbar>
+</ion-header>
+
 
 <ion-content>
   <div>
-    <img style="width:100%; height: 100%; opacity: 0.9;"src="assets/night-driving.png">
+    <img style="width:100%; height: 100%; opacity: 0.9;" src="assets/night-driving.png">
   </div>
-    
+
 </ion-content>
 
 <ion-footer>
-  <ion-button expand="full" fill="solid" style="font-weight: 700;" (click) = "login()" class = "loginButton">Login</ion-button>
-      
-  <ion-button expand="full" fill="solid" style="font-weight: 700;" (click) = "signUp()" class = "loginButton">Sign up</ion-button>
+  <ion-button expand="full" fill="solid" style="font-weight: 700;" (click)="login()" class="loginButton">Login
+  </ion-button>
+
+  <ion-button expand="full" fill="solid" style="font-weight: 700;" (click)="signUp()" class="loginButton">Sign up
+  </ion-button>
 </ion-footer>
