--- a/src/app/Components/settings/settings.component.html
+++ b/src/app/Components/settings/settings.component.html
@@ -3,8 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Settings</ion-title>
-    <ion-icon name="build-sharp" slot="end"></ion-icon>
+    <ion-title class="h3 text-center" style="color: white; font-weight: 700;">Settings</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -15,24 +14,13 @@
       <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
     </ion-item>
 
-    <ion-item>
-      <ion-icon name="card-outline" slot="start"></ion-icon>
-      <ion-label>Wallet</ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
-
-    <ion-item>
-      <ion-icon name="notifications-sharp" slot="start"></ion-icon>
-      <ion-label>Notifications</ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
-
-    <ion-item>
+    <ion-item (click)="about()">
       <ion-icon name="information-circle-outline" slot="start"></ion-icon>
       <ion-label>About</ion-label>
       <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
     </ion-item>
-    <ion-item>
+
+    <ion-item (click) = "redirectHelp()">
       <ion-icon name="call-outline" slot="start"></ion-icon>
       <ion-label>Help</ion-label>
       <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
