--- a/src/app/Components/welcome/welcome.component.html
+++ b/src/app/Components/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar class="toolbar-header">
-    <ion-title style="color: white; font-weight: 700; font-size: large;">Drivemada</ion-title>
+    <ion-title class = "h3 text-center" style="color: white; font-weight: 700; font-size: large;">Drivemada</ion-title>
   </ion-toolbar>
 </ion-header>
 
