--- a/src/app/Components/trip/trip.component.html
+++ b/src/app/Components/trip/trip.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="toolbar-header" (click)="showMenu()">
+  <ion-toolbar class="toolbar-header">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
