--- a/src/app/Components/settings/settings.component.html
+++ b/src/app/Components/settings/settings.component.html
@@ -14,6 +14,12 @@
       <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
     </ion-item>
 
+    <ion-item (click)="goEditPassword()">
+      <ion-icon name="finger-print-outline" slot="start"></ion-icon>
+      <ion-label>Security</ion-label>
+      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+    </ion-item>
+
     <ion-item (click)="about()">
       <ion-icon name="information-circle-outline" slot="start"></ion-icon>
       <ion-label>About</ion-label>
